Add new feature: set how many pokemon you want to see

--- a/index.html
+++ b/index.html
@@ -5,12 +5,23 @@
   <meta name="author" content="João Gabriel Silva Gomes">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
   <title>Pokédex v1</title>
+  <link rel="shortcut icon" href="./img/pokeball.svg" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
   <div class="container">
     <h1><img src="./img/pokeball.svg" alt="Poké Ball"> Pokédex v1</h1>
+
+    <div class="select-container">
+      <select name="quantity" id="quantity">
+        <option value="10">10</option>
+        <option value="15">15</option>
+        <option value="20">20</option>
+        <option value="25">25</option>
+        <option value="30">30</option>
+      </select>
+    </div>
     
     <div class="controls">
       <div class="first">&#60;&#60;</div>
